[project]
name = "expense_tracker"
authors = [
    { name = "siddharth", email = "siddharth.khati03@gmail.com"}
]
description = "Expense Tracker Application"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "deepgram-sdk~=2.12.0"
    "google-generativeai~=0.8.4"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
